--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> r
 a Bachelor degree in telecommunications systems from the Faculty of Electronics
 and Telecommunications (ETTI), University Politehnica of Bucharest (UPB),
 Romania, in 2014, and a double Master degree in wireless communications systems
-from UPB and CentraleSupélec, Université Paris-Saclay (with “<i>Distinction</i>”
-mention), in 2016. She received a PhD degree with “<i>Excellent</i>” mention<i>
+from UPB and CentraleSupélec, Université Paris-Saclay (with "<i>Distinction</i>"
+mention), in 2016. She received a PhD degree with "<i>Excellent</i>" mention<i>
 </i>(<i>SUMMA CUM LAUDE</i>) in 2019 from UPB and is currently a postdoctoral researcher
 and lecturer at the same university. Her research interests include adaptive
 filtering algorithms, multilinear systems and signal processing. </span></p>
@@ -195,7 +195,7 @@ text-transform:uppercase'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><b><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif;
-text-transform:uppercase'>JOURNAL  PAPERS</span></b></p>
+text-transform:uppercase'>JOURNAL PAPERS</span></b></p>
 
 <p class=MsoListParagraph style='text-align:justify;text-indent:-.25in'><a
 name="_Hlk73473391"><span style='font-size:12.0pt;line-height:115%;font-family:
@@ -203,8 +203,8 @@ name="_Hlk73473391"><span style='font-size:12.0pt;line-height:115%;font-family:
 </span></span><b><span style='font-size:12.0pt;line-height:115%;font-family:
 "Times New Roman",serif'>L.-M. Dogariu</span></b></a><span style='font-size:
 12.0pt;line-height:115%;font-family:"Times New Roman",serif'>, C. Paleologu, J.
-Benesty, C.-L. Stanciu, C.-C. Oprea, and S. Ciochin&#259;, “A Kalman filter for
-multilinear forms and its connection with tensorial adaptive filters,” <i>Sensors</i>,
+Benesty, C.-L. Stanciu, C.-C. Oprea, and S. Ciochin&#259;, "A Kalman filter for
+multilinear forms and its connection with tensorial adaptive filters," <i>Sensors</i>,
 vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</span></p>
 
 <ol style='margin-top:0in' start=2 type=1>
@@ -212,22 +212,22 @@ vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</sp
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C.-L. Stanciu, C. Elisei-Iliescu,
-     C. Paleologu, J. Benesty, and S. Ciochin&#259;, “Tensor-based adaptive filtering
-     algorithms,” <i>Symmetry</i>, vol. 13, no. 3, p. 481, Mar. 2021, DOI:
+     C. Paleologu, J. Benesty, and S. Ciochin&#259;, "Tensor-based adaptive filtering
+     algorithms," <i>Symmetry</i>, vol. 13, no. 3, p. 481, Mar. 2021, DOI:
      10.3390/sym13030481, WOS:000634166700001 – <span style='background:yellow'>ISI
      Q2</span>.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><a name="_Hlk71120299"><span style='font-size:12.0pt;line-height:
      150%;font-family:"Times New Roman",serif'>C. Elisei-Iliescu, <b>L.-M.
      Dogariu</b>, C. Paleologu, J. Benesty, A.-A. Enescu, and S. Ciochin&#259;,
-     “A recursive least-squares algorithm for the identification of trilinear
-     forms,” <i>Algorithms</i>, vol. 13, no. 6, p. 135, Jun. 2020. DOI:
+     "A recursive least-squares algorithm for the identification of trilinear
+     forms," <i>Algorithms</i>, vol. 13, no. 6, p. 135, Jun. 2020. DOI:
      10.3390/a13060135, WOS:000551191100024.</span></a></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
      M. Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C. Paleologu, J. Benesty, and S. Ciochin&#259;,
-     “An efficient Kalman filter for the identification of low-rank systems,” <i>Signal
+     "An efficient Kalman filter for the identification of low-rank systems," <i>Signal
      Processing</i>, vol. 166, id. 106237, Jan. 2020, DOI:
      10.1016/j.sigpro.2019.107239, WOS:000491683100041 – <span
      style='background:red'>ISI Q1</span>.</span></li>
@@ -235,18 +235,18 @@ vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</sp
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
      M. Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, J. Benesty, and
-     C. Paleologu, “System identification based on tensor decompositions: A
-     trilinear approach,” <i>Symmetry</i>, vol. 11, p. 556, Apr. 2019, DOI:
+     C. Paleologu, "System identification based on tensor decompositions: A
+     trilinear approach," <i>Symmetry</i>, vol. 11, p. 556, Apr. 2019, DOI:
      10.3390/sym11040556, WOS:000467314400115 – <span style='background:yellow'>ISI
      Q2</span>.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
      M. Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, C. Paleologu, and
-     J. Benesty, “A connection between the Kalman filter and an optimized LMS
+     J. Benesty, "A connection between the Kalman filter and an optimized LMS
      algorithm</span><span lang=RO style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'> for bilinear forms</span><span
-     style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,”
+     style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,"
      <i>Algorithms</i>, vol. 11, p. 211, Dec. 2018, DOI: 10.3390/a11120211,
      WOS:000454716100022.</span></li>
 </ol>
@@ -264,34 +264,34 @@ text-transform:uppercase'>CONFERENCE  PAPERS</span></b></p>
      150%'><a name="_Hlk73473428"><b><span style='font-size:12.0pt;line-height:
      150%;font-family:"Times New Roman",serif'>L.-M. Dogariu</span></b></a><span
      style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,
-     C. Paleologu, J. Benesty, and S. Ciochin&#259;, “Identification of
-     multilinear forms with the tensorial Kalman filter,” accepted for
+     C. Paleologu, J. Benesty, and S. Ciochin&#259;, "Identification of
+     multilinear forms with the tensorial Kalman filter," accepted for
      publication in the 44th International Conference on Telecommunications and
      Signal Processing (online), July 2021.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C. Elisei-Iliescu, C. Paleologu, J.
-     Benesty, and S. Ciochin&#259;, “A tensorial affine projection algorithm,” accepted
+     Benesty, and S. Ciochin&#259;, "A tensorial affine projection algorithm," accepted
      for publication in the 15-th International Symposium on Signals, Circuits
      and Systems (ISSCS), Iasi, Romania, July 2021.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>I.-D.
-     Ficiu, <b>L.-M. Dogariu</b>, C.-L. Stanciu, and C. Paleologu, “<a
+     Ficiu, <b>L.-M. Dogariu</b>, C.-L. Stanciu, and C. Paleologu, "<a
      name="_Hlk72263007">Identification of multilinear forms using combinations
-     of adaptive algorithms</a>,” in <i>Proc. the Sixth International
+     of adaptive algorithms</a>," in <i>Proc. the Sixth International
      Conference on Advances in Signal, Image and Video Processing (SIGNAL)</i>,
      Valencia, Spain, June 2021.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
      -M. Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C. Paleologu, J. Benesty, C. Oprea,
-     and S. Ciochin&#259;, “LMS algorithms for multilinear forms,&quot; in <i>Proc.
+     and S. Ciochin&#259;, "LMS algorithms for multilinear forms,&quot; in <i>Proc.
      IEEE International Symposium on Electronics and Telecommunications (ISETC)</i>,
      2020, pp. 1-4, WOS:000612681000069.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>C.
-     C. Oprea and <b>L. M. Dogariu</b>, “Face recognition using tensors and
+     C. Oprea and <b>L. M. Dogariu</b>, "Face recognition using tensors and
      gradient descriptors,&quot; in <i>Proc. IEEE International Symposium on
      Electronics and Telecommunications (ISETC)</i>, 2020, pp. 1-4, DOI:
      10.1109/isetc50328.2020.9301082, WOS:000612681000012.</span></li>
@@ -299,35 +299,35 @@ text-transform:uppercase'>CONFERENCE  PAPERS</span></b></p>
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, C. Paleologu, J.
-     Benesty, and C. Oprea, “An iterative Wiener filter for the identification
-     of multilinear forms,” in <i>Proc. IEEE International Conference on
+     Benesty, and C. Oprea, "An iterative Wiener filter for the identification
+     of multilinear forms," in <i>Proc. IEEE International Conference on
      Telecommunications and Signal Processing (TSP)</i>,<i> </i>2020, pp.
      193-197, DOI: 10.1109/TSP49548.2020.9163453, WOS:000577106400042.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>I.
-     A. Mocanu and <b>L. M. Dogariu</b>, “Propagation study of dual composite
-     right left handed structures on textile materials,” in <i>Proc. IEEE
+     A. Mocanu and <b>L. M. Dogariu</b>, "Propagation study of dual composite
+     right left handed structures on textile materials," in <i>Proc. IEEE
      International Workshop on Antenna Technology (iWAT)</i>,<i> </i>2020, pp.
      1-4, DOI: 10.1109/iWAT48004.2020.1570609909, WOS:000627803200047.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C. Elisei-Iliescu, C. Paleologu, J.
-     Benesty, and S. Ciochin&#259;, “</span><span lang=RO style='font-size:
+     Benesty, and S. Ciochin&#259;, "</span><span lang=RO style='font-size:
      12.0pt;line-height:150%;font-family:"Times New Roman",serif'>A
      proportionate affine projection algorithm for the identification of sparse
      bilinear forms</span><span style='font-size:12.0pt;line-height:150%;
-     font-family:"Times New Roman",serif'>,” in <i>Proc. IEEE </i><i>International
+     font-family:"Times New Roman",serif'>," in <i>Proc. IEEE </i><i>International
      Symposium on Signals, Circuits and Systems (ISSCS)</i>, 2019 (4 pages),
      Iasi, Romania, DOI: 10.1109/ISSCS.2019.8801769, WOS:000503459500041.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, J. Benesty, and
-     C. Paleologu, “An</span><span lang=RO style='font-size:12.0pt;line-height:
+     C. Paleologu, "An</span><span lang=RO style='font-size:12.0pt;line-height:
      150%;font-family:"Times New Roman",serif'> iterative Wiener filter for the
      identification of trilinear forms</span><span style='font-size:12.0pt;
-     line-height:150%;font-family:"Times New Roman",serif'>,” in<i> Proc. IEEE
+     line-height:150%;font-family:"Times New Roman",serif'>," in<i> Proc. IEEE
      TSP</i>, 2019, pp. 88-93, Budapest, Hungary, DOI:
      10.1109/TSP.2019.8768839, WOS:000493442800019. <b><span style='color:red'>*<i>Best
      Paper Award</i>*</span></b></span></li>
@@ -335,10 +335,10 @@ text-transform:uppercase'>CONFERENCE  PAPERS</span></b></p>
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, C. Paleologu, J.
-     Benesty, and P. Piantanida, “An optimized LMS algorithm</span><span
+     Benesty, and P. Piantanida, "An optimized LMS algorithm</span><span
      lang=RO style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
      for bilinear forms</span><span style='font-size:12.0pt;line-height:150%;
-     font-family:"Times New Roman",serif'>,” in<i> Proc. IEEE <span
+     font-family:"Times New Roman",serif'>," in<i> Proc. IEEE <span
      class=header01><span style='line-height:150%;font-family:"Times New Roman",serif;
      color:windowtext;font-weight:normal'>International Symposium on
      Electronics and Telecommunications (ISETC)</span></span></i>, 2018 (4
@@ -347,18 +347,18 @@ text-transform:uppercase'>CONFERENCE  PAPERS</span></b></p>
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, and C. Paleologu,
-     “</span><strong><span lang=RO style='font-size:12.0pt;line-height:150%;
+     "</span><strong><span lang=RO style='font-size:12.0pt;line-height:150%;
      font-weight:normal'>On the properties of the system mismatch covariance
      matrix in the LMS adaptive algorithm</span></strong><span
-     style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,”
+     style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,"
      in<i> Proc. IEEE International Conference COMMUNICATIONS (COMM)</i>, 2018,
      pp. 39-44, Bucharest, Romania, DOI: 10.1109/ICComm.2018.8484800, WOS:000449526000006.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, C. Paleologu, S. Ciochin&#259;, J.
-     Benesty, and P. Piantanida, “Identification of bilinear forms with the
-     Kalman filter,” in <i>Proc. IEEE </i><i>International Conference on <span
+     Benesty, and P. Piantanida, "Identification of bilinear forms with the
+     Kalman filter," in <i>Proc. IEEE </i><i>International Conference on <span
      style='layout-grid-mode:line'>Acoustics, Speech, and Signal Processing
      (ICASSP)</span></i>, 2018, pp. 4134-4138, Calgary, Canada,
      WOS:000446384604060.</span></li>
@@ -366,8 +366,8 @@ text-transform:uppercase'>CONFERENCE  PAPERS</span></b></p>
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.-M.
      Dogariu</span></b><span style='font-size:12.0pt;line-height:150%;
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, C. Paleologu, J.
-     Benesty, and P. Piantanida, “An adaptive solution for nonlinear system
-     identification,” in <i>Proc. IEEE </i><i>International Symposium on
+     Benesty, and P. Piantanida, "An adaptive solution for nonlinear system
+     identification," in <i>Proc. IEEE </i><i>International Symposium on
      Signals, Circuits and Systems (ISSCS),</i> 2017 (4 pages), Iasi, Romania,
      WOS:000425211500056.</span></li>
 </ol>
@@ -383,29 +383,29 @@ text-transform:uppercase'>BOOKS / DIDACTIC MATERIALS</span></b></p>
 line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif;text-transform:uppercase'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>C.
-C. Oprea, <b>L.-M. Dogariu</b>, I. Pirnog, “Digital Signal Processing – Theory
-and Applications”, Politehnica Press, 2021, ISBN: 978-606-515-937-2</span></p>
+C. Oprea, <b>L.-M. Dogariu</b>, I. Pirnog, "Digital Signal Processing – Theory
+and Applications", Politehnica Press, 2021, ISBN: 978-606-515-937-2</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-align:justify;text-indent:-.25in;
 line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif;text-transform:uppercase'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>I.
-Mocanu, <b>L.-M. Dogariu</b>, “Microwaves Problems Collection”, Printech, 2019,
+Mocanu, <b>L.-M. Dogariu</b>, "Microwaves Problems Collection", Printech, 2019,
 ISBN: 978-606-23-0986-2</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-align:justify;text-indent:-.25in;
 line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif;text-transform:uppercase'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>O.
-Datcu, A. Vulpe, <b>L. Dogariu</b>, “Electronic Measuring Instruments”
+Datcu, A. Vulpe, <b>L. Dogariu</b>, "Electronic Measuring Instruments"
 (laboratory guide), Politehnica Press, 2017, ISBN: 978-606-515-787-3</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-align:justify;text-indent:-.25in;
 line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif;text-transform:uppercase'>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>A.
-Vulpe, O. Datcu, <b>L. Dogariu</b>, “Measurements in Electronics and
-Telecommunications” (laboratory guide), Politehnica Press, 2017, ISBN:
+Vulpe, O. Datcu, <b>L. Dogariu</b>, "Measurements in Electronics and
+Telecommunications" (laboratory guide), Politehnica Press, 2017, ISBN:
 978-606-515-780-4</span></p>
 
 <p class=MsoListParagraphCxSpLast style='text-align:justify;line-height:150%'><span
