--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ name="_Hlk73473391"><span style='font-size:12.0pt;line-height:115%;font-family:
 12.0pt;line-height:115%;font-family:"Times New Roman",serif'>, C. Paleologu, J.
 Benesty, C.-L. Stanciu, C.-C. Oprea, and S. Ciochin&#259;, "A Kalman filter for
 multilinear forms and its connection with tensorial adaptive filters," <i>Sensors</i>,
-vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</span></p>
+vol. 21(10), p. 3555, May 2021 - <span style='background:red'>ISI Q1</span>.</span></p>
 
 <ol style='margin-top:0in' start=2 type=1>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
@@ -214,7 +214,7 @@ vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</sp
      font-family:"Times New Roman",serif'>, C.-L. Stanciu, C. Elisei-Iliescu,
      C. Paleologu, J. Benesty, and S. Ciochin&#259;, "Tensor-based adaptive filtering
      algorithms," <i>Symmetry</i>, vol. 13, no. 3, p. 481, Mar. 2021, DOI:
-     10.3390/sym13030481, WOS:000634166700001 – <span style='background:yellow'>ISI
+     10.3390/sym13030481, WOS:000634166700001 - <span style='background:yellow'>ISI
      Q2</span>.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><a name="_Hlk71120299"><span style='font-size:12.0pt;line-height:
@@ -229,7 +229,7 @@ vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</sp
      font-family:"Times New Roman",serif'>, C. Paleologu, J. Benesty, and S. Ciochin&#259;,
      "An efficient Kalman filter for the identification of low-rank systems," <i>Signal
      Processing</i>, vol. 166, id. 106237, Jan. 2020, DOI:
-     10.1016/j.sigpro.2019.107239, WOS:000491683100041 – <span
+     10.1016/j.sigpro.2019.107239, WOS:000491683100041 - <span
      style='background:red'>ISI Q1</span>.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
@@ -237,7 +237,7 @@ vol. 21(10), p. 3555, May 2021 – <span style='background:red'>ISI Q1</span>.</sp
      font-family:"Times New Roman",serif'>, S. Ciochin&#259;, J. Benesty, and
      C. Paleologu, "System identification based on tensor decompositions: A
      trilinear approach," <i>Symmetry</i>, vol. 11, p. 556, Apr. 2019, DOI:
-     10.3390/sym11040556, WOS:000467314400115 – <span style='background:yellow'>ISI
+     10.3390/sym11040556, WOS:000467314400115 - <span style='background:yellow'>ISI
      Q2</span>.</span></li>
  <li class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
      150%'><b><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>L.
@@ -383,7 +383,7 @@ text-transform:uppercase'>BOOKS / DIDACTIC MATERIALS</span></b></p>
 line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif;text-transform:uppercase'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>C.
-C. Oprea, <b>L.-M. Dogariu</b>, I. Pirnog, "Digital Signal Processing – Theory
+C. Oprea, <b>L.-M. Dogariu</b>, I. Pirnog, "Digital Signal Processing - Theory
 and Applications", Politehnica Press, 2021, ISBN: 978-606-515-937-2</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-align:justify;text-indent:-.25in;
@@ -422,7 +422,7 @@ line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>Adaptive Algorithms for Multilinear System
 Identification Using Tensor Modelling (AdAMSysTeM)</span></i><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,
-2020 – 2021 (24 months), UEFISCDI, PN-III-P1-1.1-PD-2019-0340 (</span><b><span
+2020 - 2021 (24 months), UEFISCDI, PN-III-P1-1.1-PD-2019-0340 (</span><b><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>project
 manager</span></b><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>)</span><b><span style='font-size:12.0pt;line-height:
@@ -445,7 +445,7 @@ line-height:150%'><i><span style='font-size:12.0pt;line-height:150%;font-family:
 </span></span></i><i><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>Nonlinear personal encryption</span></i><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,
-2017 – 2018 (12 months), GEX, EL 09-17-06/2017 (</span><b><span
+2017 - 2018 (12 months), GEX, EL 09-17-06/2017 (</span><b><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>doctoral
 researcher</span></b><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>)</span></p>
