Replaced French accents

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> r
 a Bachelor degree in telecommunications systems from the Faculty of Electronics
 and Telecommunications (ETTI), University Politehnica of Bucharest (UPB),
 Romania, in 2014, and a double Master degree in wireless communications systems
-from UPB and CentraleSupélec, Université Paris-Saclay (with "<i>Distinction</i>"
+from UPB and CentraleSup&#233lec, Universit&#233 Paris-Saclay (with "<i>Distinction</i>"
 mention), in 2016. She received a PhD degree with "<i>Excellent</i>" mention<i>
 </i>(<i>SUMMA CUM LAUDE</i>) in 2019 from UPB and is currently a postdoctoral researcher
 and lecturer at the same university. Her research interests include adaptive
