Removed italic from research grants

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@ researcher</span></b><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>)</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-align:justify;text-indent:-.25in;
-line-height:150%'><i><span style='font-size:12.0pt;line-height:150%;font-family:
+line-height:150%'><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></i><i><span style='font-size:12.0pt;line-height:150%;font-family:
+</span></span><i><span style='font-size:12.0pt;line-height:150%;font-family:
 "Times New Roman",serif'>Nonlinear personal encryption</span></i><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,
 2017 - 2018 (12 months), GEX, EL 09-17-06/2017 (</span><b><span
